# stagnant

./: .gitignore  Cargo.toml  README.md  index.html  stagnant
.github/workflows/: nightly.yml  releases.yml  rust.yml
src/: cli.rs  dir.rs  frontmatter.rs  lib.rs  main.rs  posts.rs  template.rs
src/frontmatter/: mod.rs  parser.rs  splitter.rs  yaml_parser.rs
src/generator/: mod.rs  posts.rs
src/post_generator/: mod.rs  posts.rs
templates/minimalist/: README.md  [link].html  index.html
templates/minimalist/.github/workflow/: stagnant.yml
templates/minimalist/css/: main-style.css  post-style.css
templates/minimalist/css/minimalist/css/: main-style.css
templates/minimalist/posts/: [id].html  test-post.md
templates/minimalist/template/: [link].html  index.html
templates/minimalist/template/css/: github-dark.css  github-light.css  main-style.css  post-style.css
templates/minimalist/template/posts/: [id].html
