[package]
name = "stagnant"
version = "0.3.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pulldown-cmark = "0.11.0"
gray_matter = "0.2.8"
yaml-rust2 = "0.8.1"
clap = { version = "4.5.7", features = ["derive"] }

[dev-dependencies]
tempfile = "3.10.1"
